Style headings and add specific color

--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,15 @@
 .recipe-link a {
     color: crimson;
 }
+
+.pizza {
+    color: chocolate;
+}
+
+.sushi {
+    color:lawngreen;
+}
+
+.taco {
+    color:deepskyblue;
+}
